# gem2

./: CMakeLists.txt  README.md  package.xml
GEM2_nao_training/: accX.txt  accY.txt  accZ.txt  baccX.txt  baccX_LL.txt  baccX_RL.txt  baccY.txt  baccY_LL.txt  baccY_RL.txt  baccZ.txt  baccZ_LL.txt  baccZ_RL.txt  bgX.txt  bgX_LL.txt  bgX_RL.txt  bgY.txt  bgY_LL.txt  bgY_RL.txt  bgZ.txt  bgZ_LL.txt  bgZ_RL.txt  comvX.txt  comvY.txt  comvZ.txt  gX.txt  gY.txt  gZ.txt  laccX.txt  laccY.txt  laccZ.txt  lfX.txt  lfY.txt  lfZ.txt  lgX.txt  lgY.txt  lgZ.txt  ltX.txt  ltY.txt  ltZ.txt  lvX.txt  (+23 more)
GEM2_nao_training/NAO1/: accX.txt  accY.txt  accZ.txt  baccX.txt  baccX_LL.txt  (+58 more)
GEM2_talos_training/: accX.txt  accY.txt  accZ.txt  baccX.txt  baccX_LL.txt  baccX_RL.txt  baccY.txt  baccY_LL.txt  baccY_RL.txt  baccZ.txt  baccZ_LL.txt  baccZ_RL.txt  bgX.txt  bgX_LL.txt  bgX_RL.txt  bgY.txt  bgY_LL.txt  bgY_RL.txt  bgZ.txt  bgZ_LL.txt  bgZ_RL.txt  comvX.txt  comvY.txt  comvZ.txt  gX.txt  gY.txt  gZ.txt  gt.txt  laccX.txt  laccY.txt  laccZ.txt  lfX.txt  lfY.txt  lfZ.txt  lgX.txt  lgY.txt  lgZ.txt  ltX.txt  ltY.txt  ltZ.txt  (+24 more)
config/: gem2_params.yaml  gem2_params_cogimon.yaml  gem2_params_nao.yaml  gem2_params_nao_default.yaml  gem2_params_talos.yaml  gem2_params_talos_real.yaml
launch/: gem2_ros.launch  gem2_ros_nao.launch
msg/: GaitPhaseProbabilities.msg
src/: autoencoder.py  gem2.py  gem2_ros.py  gem2_ros_wrapper.py  gem2_tools.py  load.py  mergeDatasets.py  supervisedAutoencoder.py  supervisedClassifier.py  supervisedVariationalAutoencoder.py  train.py  variationalAutoencoder.py
(+592 files in other folders)
