cmake_minimum_required(VERSION 2.8.3)
project(gem2_ros)

find_package(catkin REQUIRED COMPONENTS
  rospy
  std_msgs
  geometry_msgs
  sensor_msgs
  message_generation
)


add_message_files(
FILES GaitPhaseProbabilities.msg
)

generate_messages(
   DEPENDENCIES
   std_msgs
)
catkin_package(
   CATKIN_DEPENDS rospy std_msgs geometry_msgs sensor_msgs message_runtime
)